# scandemo

./: .env  BUILD_SUMMARY.md  COPY_TO_LINUX_GUIDE.md  Cargo.toml  DEPLOYMENT_OPTIONS.md  Dockerfile  Dockerfile.linux  FINAL_LINUX_SCRIPT.md  FINAL_SOLUTION.md  FINAL_UNIX_SCRIPT_COMPLETE.md  FINAL_UNIX_SCRIPT_READY.md  LINUX_BUILD_GUIDE.md  PACKAGE_MANAGER_INSTALL.md  PREPARE_PACKAGES_GUIDE.md  README.md  README_QT5.md  UNIX_FORMAT_COMPLETE.md  WORKING_SOLUTION.md  build_docker_linux.sh  build_linux_clean.sh  build_linux_complete.bat  build_linux_complete.sh  build_linux_docker.bat  build_linux_docker.sh  build_linux_final.sh  build_linux_simple.sh  build_linux_simple_fixed.sh  build_linux_simple_unix.sh  build_linux_working.sh  build_qt.sh  build_static.sh  convert_to_unix.bat  convert_to_unix.ps1  convert_to_unix_format.ps1  copy_to_linux.bat  create_offline_package.sh  create_unix_script.ps1  cross_compile.sh  deploy_clean.sh  deploy_linux.sh  (+26 more)
.cargo/: config.toml
.github/workflows/: main.yml
qt_frontend/: CMakeLists.txt  apiclient.cpp  apiclient.h  barcodescanner.cpp  barcodescanner.h  main.cpp  mainwindow.cpp  mainwindow.h  statsdisplay.cpp  statsdisplay.h
src/: main.rs
